<resources>
    <string name="app_name">Android Labs</string>
    <string name="hello_message">Hello World!</string>
    <string name="ButtonText">Click Here</string>
    <string name="checkBoxText">Check this out!</string>
    <string name="textViewText">Look at my GUI</string>
    <string name="mySwitch">Switch on / off</string>
    <string name="editText">Type Here</string>
    <string name="toast_message">Here is more information</string>
    <string name="snack_check">"Checkbox is now "</string>
    <string name="snack_switch">"Switch is now "</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="flag_text">Canadian Flag</string>
    <string name="undo">Undo</string>
    <string name="textViewEmailString">Enter your email address:</string>
    <string name="editTextEmailString">Type email here</string>
    <string name="textViewPWDString">Type your password:</string>
    <string name="ButtonLoginText">LOGIN</string>
    <string name="your_profile">Your Profile</string>
    <string name="your_name">Your Name:</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="your_email">Your email:</string>
    <string name="enter_your_email">Enter Your email</string>
    <string name="your_picture">Your Picture:</string>
    <string name="tView2Click">Click the button above to take a picture</string>
    <string name="goToChat">Go to Chat</string>
    <string name="sendButton">Send</string>
    <string name="rxButton">Receive</string>
    <string name="chatText"></string>
    <string name="chatHint">Type Here</string>
    <string name="alert_title">Do you want to delete this?</string>
    <string name="alert_msg1">"The selected row is: "</string>
    <string name="alert_msg2">"The selected database is: "</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="goToWeather">Go To Weather</string>
    <string name="wxIco">none</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frag_msg">Message Here</string>
    <string name="frag_ID">ID=</string>
    <string name="frag_isSend">Is a Send Message</string>
    <string name="frag_hide">Hide</string>
    <string name="go_to_toolbar_page">Go To Toolbar Page</string>
    <string name="msgRebel">You clicked on item 1, you Rebel you</string>
    <string name="msgBatman">You clicked on item 2, Batman is on his way!!</string>
    <string name="msgFlash">You clicked on item 3, you\'re fast.</string>
    <string name="msgOverflow">You clicked on the overflow menu. You found the hidden item.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
</resources>