<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textViewEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewEmailString" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:text="@string/editTextEmailString"/>

    <TextView
        android:id="@+id/textViewPWD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewPWDString" />

    <EditText
        android:id="@+id/editTextPWD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/buttonLogin"
        android:backgroundTint="@color/grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ButtonLoginText" />

</LinearLayout>