<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--Row 1-->
    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textViewText"
        android:layout_alignParentTop="true"
        android:textSize="30dp"/>

    <!--Row 2-->
    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ButtonText"
        android:layout_below="@id/textView" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkBoxText"
        android:layout_below="@id/textView"
        android:layout_alignLeft="@id/switch1"
        />

    <!--Row 3-->
    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button"
        android:layout_alignParentLeft="true"
        android:src="@drawable/flag" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mySwitch"
        android:layout_alignTop="@id/imageButton"
        android:layout_toRightOf="@id/imageButton" />

    <!--Row 4-->
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/editText"
        android:inputType="textPersonName|textCapWords"
        android:layout_below="@id/imageButton"/>

</RelativeLayout>