<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--Row 1-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textViewText"
            android:textSize="30dp" />

    </LinearLayout>

    <!--Row 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:backgroundTint="@color/grey"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ButtonText"
            android:layout_weight="1"
            android:layout_gravity="fill" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkBoxText"
            android:layout_weight="1"
            android:layout_gravity="fill" />

    </LinearLayout>

    <!--Row 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/flag"
            android:layout_weight="1"
            android:layout_gravity="fill"
            android:contentDescription="@string/flag_text"/>

        <Switch
            android:id="@+id/switch1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mySwitch"
            android:layout_weight="1"
            android:layout_gravity="fill" />

    </LinearLayout>

    <!--Row 4-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/editText"
            android:inputType="textPersonName|textCapWords"/>

    </LinearLayout>

</LinearLayout>