<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/refresher"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ListView
        android:id="@+id/theListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignBottom="@+id/chatGrid"/>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <GridLayout
        android:id="@+id/chatGrid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:rowCount="1"
        android:columnCount="3" >

        <Button
            android:id="@+id/sendButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sendButton" />
        <EditText
            android:id="@+id/chatText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal"
            android:hint="@string/chatHint"
            android:text="@string/chatText"/>
        <Button
            android:id="@+id/rxButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rxButton" />

    </GridLayout>


</RelativeLayout>